k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gimi
  labels:
    app.kubernetes.io/part-of: gimi-cicd
